# ascii-art

./: README.md  out.txt  pyproject.toml
src/: ascii.py  main.py
